exports[`BpkCardTicket should render correctly 1`] = `
<div
  className="bpk-card-ticket"
  role="button">
  <div
    className="bpk-card-ticket__main bpk-card-ticket__main--padded bpk-card-ticket__main--horizontal">
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </div>
  <div
    aria-hidden="true"
    className="bpk-card-ticket__punchline bpk-card-ticket__punchline--vertical"
    role="presentation">
    <div
      className="bpk-card-ticket__notch bpk-card-ticket__notch--top" />
    <div
      className="bpk-card-ticket__notch bpk-card-ticket__notch--bottom" />
  </div>
  <div
    className="bpk-card-ticket__stub bpk-card-ticket__stub--padded bpk-card-ticket__stub--horizontal">
    Ticket stub
  </div>
</div>
`;

exports[`BpkCardTicket should render correctly with "padded" attribute equal to "false" 1`] = `
<div
  className="bpk-card-ticket"
  role="button">
  <div
    className="bpk-card-ticket__main bpk-card-ticket__main--horizontal">
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </div>
  <div
    aria-hidden="true"
    className="bpk-card-ticket__punchline bpk-card-ticket__punchline--vertical"
    role="presentation">
    <div
      className="bpk-card-ticket__notch bpk-card-ticket__notch--top" />
    <div
      className="bpk-card-ticket__notch bpk-card-ticket__notch--bottom" />
  </div>
  <div
    className="bpk-card-ticket__stub bpk-card-ticket__stub--horizontal">
    Ticket stub
  </div>
</div>
`;

exports[`BpkCardTicket should render correctly with a "className" attribute 1`] = `
<div
  className="bpk-card-ticket custom-class"
  role="button">
  <div
    className="bpk-card-ticket__main bpk-card-ticket__main--padded bpk-card-ticket__main--horizontal">
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </div>
  <div
    aria-hidden="true"
    className="bpk-card-ticket__punchline bpk-card-ticket__punchline--vertical"
    role="presentation">
    <div
      className="bpk-card-ticket__notch bpk-card-ticket__notch--top" />
    <div
      className="bpk-card-ticket__notch bpk-card-ticket__notch--bottom" />
  </div>
  <div
    className="bpk-card-ticket__stub bpk-card-ticket__stub--padded bpk-card-ticket__stub--horizontal">
    Ticket stub
  </div>
</div>
`;

exports[`BpkCardTicket should render correctly with a "vertical" attribute 1`] = `
<div
  className="bpk-card-ticket bpk-card-ticket--vertical"
  role="button">
  <div
    className="bpk-card-ticket__main bpk-card-ticket__main--padded bpk-card-ticket__main--vertical">
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </div>
  <div
    aria-hidden="true"
    className="bpk-card-ticket__punchline bpk-card-ticket__punchline--horizontal"
    role="presentation">
    <div
      className="bpk-card-ticket__notch bpk-card-ticket__notch--left" />
    <div
      className="bpk-card-ticket__notch bpk-card-ticket__notch--right" />
  </div>
  <div
    className="bpk-card-ticket__stub bpk-card-ticket__stub--padded bpk-card-ticket__stub--vertical">
    Ticket stub
  </div>
</div>
`;

exports[`BpkCardTicket should render correctly with an "href" attribute 1`] = `
<a
  className="bpk-card-ticket"
  href="//www.skyscanner.net">
  <div
    className="bpk-card-ticket__main bpk-card-ticket__main--padded bpk-card-ticket__main--horizontal">
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </div>
  <div
    aria-hidden="true"
    className="bpk-card-ticket__punchline bpk-card-ticket__punchline--vertical"
    role="presentation">
    <div
      className="bpk-card-ticket__notch bpk-card-ticket__notch--top" />
    <div
      className="bpk-card-ticket__notch bpk-card-ticket__notch--bottom" />
  </div>
  <div
    className="bpk-card-ticket__stub bpk-card-ticket__stub--padded bpk-card-ticket__stub--horizontal">
    Ticket stub
  </div>
</a>
`;
